--- a/PersonalFinanceApp  desktop/MainWindow.xaml
+++ b/PersonalFinanceApp  desktop/MainWindow.xaml
@@ -6,7 +6,7 @@
 
     <!-- Setting the background image -->
     <Window.Background>
-        <ImageBrush ImageSource="C:\Users\shali\Desktop\GUI React\desktop\Finance\PersonalFinanceApp-master\background.jpg" />
+        <ImageBrush ImageSource="https://tpfcu.com/wp-content/uploads/2020/07/household-expenses-concept-blue-toned-background.jpg" />
     </Window.Background>
 
     
@@ -32,7 +32,7 @@
 
         <!-- Dynamic Content Area -->
         <Frame x:Name="DynamicContentFrame" Grid.Row="1" Margin="10,10,10,20"
-               Background="White"
+               Background="#ff333333"
                NavigationUIVisibility="Hidden" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
 
         <!-- Footer / Buttons -->
