--- a/PersonalFinanceApp  desktop/Views/TransactionsPage.xaml
+++ b/PersonalFinanceApp  desktop/Views/TransactionsPage.xaml
@@ -2,14 +2,19 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       Title="Transactions">
-    <Grid Background="#1E1E1E" Margin="20">
+    <Grid   Margin="20">
+
+        <Grid.Background>
+            <ImageBrush ImageSource="https://www.firstcitizens.com/content/dam/firstcitizens/images/resources/personal/budgeting/how-to-make-budget@2x.jpg.transform/image-scaled-2x-to-1x/image.jpeg" Stretch="UniformToFill"/>
+        </Grid.Background>
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <!-- Page Title -->
-        <TextBlock Text="Add New Transaction" Foreground="White" FontSize="24" FontWeight="Bold" 
+        <TextBlock Text="Add New Transaction" Foreground="DarkBlue" FontSize="24" FontWeight="Bold" 
                    HorizontalAlignment="Center" Margin="0,0,0,20" />
 
         <!-- Form -->
@@ -24,14 +29,14 @@
 
             <!-- Amount -->
             <StackPanel Grid.Row="0" Margin="0,10">
-                <TextBlock Text="Amount" Foreground="White" FontSize="16" />
-                <TextBox x:Name="AmountInput" FontSize="14" Background="#333333" Foreground="White" 
-                         BorderBrush="Gray" />
+                <TextBlock Text="Amount" Foreground="DarkBlue" FontSize="16" />
+                <TextBox x:Name="AmountInput" FontSize="14" Background="#007ACC" Foreground="White" 
+                         BorderBrush="DarkGray" BorderThickness="3" />
             </StackPanel>
 
             <!-- Category -->
             <StackPanel Grid.Row="1" Margin="0,10">
-                <TextBlock Text="Category" Foreground="White" FontSize="16" />
+                <TextBlock Text="Category" Foreground="DarkBlue" FontSize="16" />
                 <ComboBox x:Name="CategoryDropdown" FontSize="14" HorizontalAlignment="Stretch"
           Foreground="White" Background="#333333" BorderBrush="Gray">
                     <!-- Dropdown Items -->
@@ -61,11 +66,11 @@
                                     <ControlTemplate TargetType="ComboBox">
                                         <Grid>
                                             <!-- Display Area -->
-                                            <Border Name="ContentBorder" Background="#333333" BorderBrush="Gray" BorderThickness="1">
+                                            <Border  Name="ContentBorder" Background="#007ACC"   BorderBrush="DarkGray" BorderThickness="1">
                                                 <ContentPresenter Content="{TemplateBinding SelectionBoxItem}" 
                                                   VerticalAlignment="Center"
                                                   HorizontalAlignment="Left"
-                                                  Margin="5,2" />
+                                                  Margin="5,2"  />
                                             </Border>
 
                                             <!-- Dropdown Arrow -->
@@ -110,14 +115,14 @@
 
             <!-- Date -->
             <StackPanel Grid.Row="2" Margin="0,10">
-                <TextBlock Text="Date" Foreground="White" FontSize="16" />
+                <TextBlock Text="Date" Foreground="DarkBlue" FontSize="16" />
                 <DatePicker x:Name="TransactionDate" FontSize="14" HorizontalAlignment="Stretch">
                     <DatePicker.Resources>
                         <!-- Style for the DatePicker TextBox -->
                         <Style TargetType="DatePickerTextBox">
-                            <Setter Property="Foreground" Value="White" />
-                            <Setter Property="Background" Value="#333333" />
-                            <Setter Property="BorderBrush" Value="Gray" />
+                            <Setter Property="Foreground" Value="Black" />
+                            <Setter Property="Background" Value="#007ACC" />
+                            <Setter Property="BorderBrush" Value="Transparent" />
                             <Setter Property="BorderThickness" Value="1" />
                             <Setter Property="Padding" Value="5,2" />
                             <Setter Property="Template">
@@ -156,8 +161,8 @@
 
             <!-- Description -->
             <StackPanel Grid.Row="3" Margin="0,10">
-                <TextBlock Text="Description" Foreground="White" FontSize="16" />
-                <TextBox x:Name="DescriptionInput" FontSize="14" Background="#333333" Foreground="White" 
+                <TextBlock Text="Description" Foreground="DarkBlue" FontSize="16" />
+                <TextBox x:Name="DescriptionInput" FontSize="14" Background="#007ACC" Foreground="White" 
                          BorderBrush="Gray" Height="100" TextWrapping="Wrap" AcceptsReturn="True" />
             </StackPanel>
 
