--- a/PersonalFinanceApp  desktop/Views/AdminPage.xaml
+++ b/PersonalFinanceApp  desktop/Views/AdminPage.xaml
@@ -5,7 +5,7 @@
 
     <Grid>
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="10">
-            <TextBlock Text="Admin Panel" Foreground="White" FontSize="24" FontWeight="Bold" TextAlignment="Center" Margin="0,0,0,10"/>
+            <TextBlock Text="Admin Panel" Foreground="Black" FontSize="24" FontWeight="Bold" TextAlignment="Center" Margin="0,0,0,10"/>
             <Button Content="Backup Database" Click="BackupDatabase_Click" Width="150" Height="50" Padding="10" Style="{StaticResource DarkThemeButton}" Margin="0,0,0,10"/>
             <Button Content="Restore Backup" Click="RestoreBackup_Click" Width="150" Height="50" Padding="10" Style="{StaticResource DarkThemeButton}" Margin="0,0,0,10"/>
             <Button Content="Reset Data" Click="ResetData_Click" Width="150" Height="50" Padding="10" Style="{StaticResource DarkThemeButton}" Margin="0,0,0,10"/>
